[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/Bacteria.gd" type="Script" id=1]
[ext_resource path="res://assets/art/probably living objects/bacteria/bacteria0000.png" type="Texture" id=2]
[ext_resource path="res://assets/art/probably living objects/bacteria/bacteria0002.png" type="Texture" id=3]
[ext_resource path="res://assets/art/probably living objects/bacteria/bacteria0001.png" type="Texture" id=4]

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;
render_mode unshaded;

uniform float Shift_Hue;

void fragment() {
// Input:3
	vec3 input_color;
	vec4 texture_color = texture(TEXTURE, UV);
	input_color = texture_color.rgb;

// VectorFunc:2
	vec3 color_hsv;
	{
		vec3 c = input_color;
		vec4 K = vec4(0.0, -1.0 / 3.0, 2.0 / 3.0, -1.0);
		vec4 p = mix(vec4(c.bg, K.wz), vec4(c.gb, K.xy), step(c.b, c.g));
		vec4 q = mix(vec4(p.xyw, c.r), vec4(c.r, p.yzx), step(p.x, c.r));
		float d = q.x - min(q.w, q.y);
		float e = 1.0e-10;
		color_hsv=vec3(abs(q.z + (q.w - q.y) / (6.0 * d + e)), d / (q.x + e), q.x);
	}

	color_hsv.x = mod((color_hsv.x + Shift_Hue), 1.0f);

// VectorFunc:5
	vec3 color_rgb;
	{
		vec3 c = color_hsv;
		vec4 K = vec4(1.0, 2.0 / 3.0, 1.0 / 3.0, 3.0);
		vec3 p = abs(fract(c.xxx + K.xyz) * 6.0 - K.www);
		color_rgb=c.z * mix(K.xxx, clamp(p - K.xxx, 0.0, 1.0), c.y);
	}

// Output:0
	texture_color = vec4(color_rgb.rgb,texture_color.a);
	COLOR.rgba = texture_color;

}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/Shift_Hue = 0.0

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[node name="Bacteria" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 6 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Timers" type="Node" parent="."]

[node name="ExplodeStartDelay" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true
autostart = true

[node name="ExplodeTimer" type="Timer" parent="Timers"]
wait_time = 10.0
one_shot = true

[node name="MoveDelayTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="ProgressBarBackground" type="ColorRect" parent="."]
margin_left = -11.0
margin_top = -15.0
margin_right = 11.0
margin_bottom = -11.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExplodeProgressBar" type="ProgressBar" parent="."]
margin_left = -10.0
margin_top = -14.0
margin_right = 10.0
margin_bottom = -12.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
max_value = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Timers/ExplodeStartDelay" to="." method="_on_ExplodeStartDelay_timeout"]
[connection signal="timeout" from="Timers/ExplodeTimer" to="." method="_on_ExplodeTimer_timeout"]
[connection signal="timeout" from="Timers/MoveDelayTimer" to="." method="_on_MoveDelayTimer_timeout"]
